# socket-vdash

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  db.py  docker-compose.yml  init.sql  main.py  metrics.py  pyproject.toml  requirements.txt  socket_client.py
collector/: db.py  socket_client.py
grafana/provisioning/dashboards/: dashboard.yml  socket_dashboard.json
grafana/provisioning/datasources/: socket.yml
scripts/: seed_demo_data.py  validate_api.py  watch_scan.py
