[project]
name = "socket-vdash"
version = "0.1.0"
description = "Socket Security Value Dashboard - Grafana integration for Socket.dev metrics"
authors = [{ name = "Jenna" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.1",
    "click>=8.1.7",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["collector"]

[tool.ruff]
line-length = 88
target-version = "py311"
